<resources>
    <string name="app_name" translatable="false">WIP</string>
    <string name="app_under_name" translatable="false">Work Is Progress</string>
    <string name="version">Version 1.0</string>
    <string name="splash_page_icon_describer">Splash page icon</string>
    <string name="quote_describer" translatable="false">If it matters, paint it</string>
    <string name="shop_button">Button that displays the shop</string>
    <string name="play_button">Button that displays the screen for starting the productivity session</string>
    <string name="home">Home button that displays the home</string>
    <string name="kingdom">Kingdom button that displays your kingdom</string>
    <string name="settings">Settings button that displays the application settings</string>
    <string name="new_story_default">New story</string>
    <string name="new_story_title">Story Title</string>
    <string name="story_title_empty_message">Please insert a name for your story</string>
    <string name="story_time_textview">Story time</string>
    <string name="optional_settings_textview">Opt. settings</string>
    <string name="silent_mode">Silent mode</string>
    <string name="hardcore_mode">Hardcore mode</string>
    <string name="choose_avatar_textview">Choose avatar</string>
    <string name="avatar_description" translatable="false">Avatar</string>
    <string name="avatar_dx_arrow">Arrow to scroll right through the available avatars</string>
    <string name="avatar_sx_arrow">Arrow to scroll left through the available avatars</string>
    <string name="start_story_button">Press to start the productivity session</string>
    <string name="back_button">Press to return to home</string>
    <string name="info_button">Press to describe the optional settings</string>
    <string name="slider">Seekbar that allows you to select the working time and the pause time</string>
    <string name="work">work</string>
    <string name="pause">pause</string>
    <string name="stop_button_string">Button to end the productivity session</string>
    <string name="companion_icon">Selected avatar</string>
    <string name="bonfire">Bonfire: pause symbol</string>
    <string name="stand">Easel</string>
    <string name="artwork">Canvas</string>
    <string name="incoraggiamento_1">Good Luck!</string>
    <string name="incoraggiamento_2">Lock the device!</string>
    <string name="incoraggiamento_3">Put the device away</string>
    <string name="incoraggiamento_4">Don\'t lose focus</string>
    <string name="incoraggiamento_5">Don\'t give up!</string>
    <string name="incoraggiamento_6">Give all of yourself</string>
    <string name="pausa_1">Great work!</string>
    <string name="pausa_2">Here, have a little break</string>
    <string name="pausa_3">Well done!</string>
    <string name="pausa_4">Coffee break</string>
    <string name="shop_string" translatable="false">Shop</string>
    <string name="buy_avatars_string">Buy avatars</string>
    <string name="buy_backgrounds_string">Buy backgrounds</string>
    <string name="background_description" translatable="false">foto background</string>
    <string name="background_dx_arrow">Arrow to scroll right through the available backgrounds</string>
    <string name="background_sx_arrow">Arrow to scroll left through the available backgrounds</string>
    <string name="avatar_price_string" translatable="false">0</string>
    <string name="background_price_string" translatable="false">0</string>
    <string name="coin_price_description">Coins available</string>
    <string name="avatar_detail_string">Artwork</string>
    <string name="avatar_name_string" translatable="false">Venus</string>
    <string name="buy_button">Button to buy the artwork</string>
    <string name="order_back_button">Button to return into the shop</string>
    <string name="info">Learn about the\n story of this\nartwork</string>
    <string name="shop_info_button">Button showing the description of the artwork</string>
    <string name="venus">Venus</string>
    <string name="the_son_of_man">The Son of Man</string>
    <string name="girl_with_a_pearl_earring">Girl with a Pearl Earring</string>
    <string name="the_scream">The Scream</string>
    <string name="van_gogh_self_portrait">Van Gogh</string>
    <string name="david">David</string>
    <string name="the_creation_of_adam">The Creation of Adam</string>
    <string name="magritte_kiss">The Lovers</string>
    <string name="weathfield_with_crows">Withfield with crows</string>
    <string name="the_persistence_of_memory">The Persistence of Memory</string>
    <string name="hopper_nighthawks">Nighthawks</string>
    <string name="venere_description">Painted by Sandro Botticelli between 1482-1485, and
        exposed at the Galleria degli Uffizi in Florence, The Birth of Venus is an artwork made
        of Tempera and alabaster powder on canvas depicting the myth of the birth of the goddess
        Venus from the sea foam.\n</string>
    <string name="magritte_apple_description">The Son of Man is a 1964 painting by the Belgian
        surrealist painter René Magritte. It is perhaps his best-known artwork. Magritte painted
        it as a self-portrait.</string>
    <string name="girl_with_a_pearl_earring_description">Girl with a Pearl Earring is an oil
        painting by Dutch Golden Age painter Johannes Vermeer, dated circa 1665. It depicts a
        European girl wearing an exotic dress, an oriental turban, and what appears to be a very
        large pearl as an earring.</string>
    <string name="david_description">Sculpted by Michelangelo Buonarroti between 1501–1504,
        and exposed at the Galleria dell\'Accademia in Florence, David is a marble sculpture
        portraying the biblical hero preparing to face Goliath the giant.\n</string>
    <string name="van_gogh_autoritratto_description">Painted by Vincent Van Gogh in 1889, and
        exposed at the Musée d\'Orsay in Paris, Van Gogh\'s self portrait is an artwork made
        of oil on canvas.\n Vincent often presented himself as restrained and serious in
        his self-portraits, with a look of concentration on his face.\n</string>
    <string name="urlo_di_munch_description">Painted by Edvard Munch in 1893, and
        exposed at the National Gallery in Oslo, The Scream is an artwork made of oil, tempera,
        pastel and crayon on cardboard symbolizing the anxiety of the human condition.\n</string>
    <string name="van_gogh_field_with_crows_description">Painted by Vincent Van Gogh in 1890, and
        exposed at the Van Gogh Museum in Amsterdam, Wheatfield with crows is an artwork made of
        oil on canvas.\n Van Gogh painted his wheatfields under stormy skies to express sadness and
        extreme loneliness, but at the same time he wanted to show what he considered
        healthy and fortifying.\n</string>
    <string name="creazione_di_adamo_description">Painted by Michelangelo Buonarroti around 1512,
        The Creation of Adam is a fresco painting which forms part of the Sistine Chapel\'s
        ceiling and that illustrates God giving life to Adam, the first man.\n
        The fresco is part of a complex iconographic scheme and is chronologically the fourth in
        the series of panels depicting episodes from Genesis.\n</string>
    <string name="magritte_kiss_description">Painted by René Magritte in 1928, and exposed at the
        Museum of Modern Art in New York, The Lovers is an artwork made of oil on canvas.\n
        The Lovers represents the conflict between true identity and the image of a person in
        the mind of his lover.\n</string>
    <string name="the_persistence_of_memory_desciption">Painted by artist Salvador in 1931, is
        one of the most recognizable works of Surrealism. It epitomizes Dalí\'s theory of
        \"softness\" and "hardness\", which was central to his thinking at the time</string>
    <string name="hopper_nighthawks_description">Painted by Edward Hopper around 1942.
        The paint is exhibited in Chicago\'s Art Institute. Outside the club the street is deserted
        because the scene is set late at night. There is no interaction between the protagonists and
        each of them is immersed in their own thoughts. </string>
    <string name="story_title">Story Title</string>
    <string name="num_of_chapters">Number of chapters</string>
    <string name="chapter_title">Chapter title</string>
    <string name="chapter_time">time: 2.01.23</string>
    <string name="chapter_date">date: 12/10/2022</string>
    <string name="creation_date">Creation date</string>
    <string name="total_time_studying">Total study time</string>
    <string name="story_detail">Story\ndetails</string>
    <string name="story_detail_title">Story Related Title</string>
    <string name="story_name">Story name</string>
    <string name="icon_search_button">search button inside own kingdom</string>
    <string name="chapter_info">Chapter\nInfo</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="avatar_text" translatable="false">Avatar</string>
    <string name="chapter_info_date">Date:</string>
    <string name="chapter_info_time">Time:</string>
    <string name="chapter_info_study_break">Work/Break:</string>
    <string name="change_time">Work/Break</string>
    <string name="default_partition">Default partition</string>
    <string name="story_time_limit">Time limit\n(minutes)</string>
    <string name="ergonomy">Ergonomy</string>
    <string name="left_hand_mode">Lefthand mode</string>
    <string name="about_the_app">About the app</string>
    <string name="info_text">Info</string>
    <string name="info_text_button_settings">Button the shows informations about the application</string>
    <string name="shhh" translatable="false">\"Shhhh\"</string>
    <string name="silent_mode_description">Disables notification sounds.\nSTOP TALKING TO\nPEOPLE!</string>
    <string name="sh_divider" translatable="false">------</string>
    <string name="grrr" translatable="false">\"Grrrr\"</string>
    <string name="hardcore_mode_description">Enables Silent mode and if you exit the app your story automatically ends.\n\nIn other words, you can only lock and unlock the phone but make sure to wait some seconds between locking and unlocking.\n\"EVIL LAUGH\"</string>
    <string name="okay_button">Okay responde that closes the popup</string>
    <string name="order_detail">Order detail</string>
    <string name="order_detail_quote" translatable="false">\"Happy noises\"</string>
    <string name="order_detail_description">Are you sure you\nwant to buy this\nartwork for %1$d\ncoins?</string>
    <string name="yes_button_description">bottone per confermare l\'acquisto</string>
    <string name="no_button_description">bottone uscire dalla schermata di acquisto</string>
    <string name="not_enough_coins_title">Not enough\ncoins</string>
    <string name="negative_quote" translatable="false">\"Sad noises\"</string>
    <string name="not_enough_coins">Sorry\! Not enough\ncoins. We don\'treally \nwant coins, we want you\nto be productive.\nCome back again\nwhen you will earn enough \ncoins to deserve\nthis artwork.\n</string>
    <string name="purchase_completed">Purchase\ncompleted</string>
    <string name="positive_quote" translatable="false">\"Rock \'n Roll\"</string>
    <string name="hardcore_dialog_title" translatable="false">Game Over</string>
    <string name="hardcore_dialog_quote" translatable="false">\"Mamma mia\"</string>
    <string name="hardcore_dialog_description_1">The key to being focused is to intensely enjoy whatever you are doing.</string>
    <string name="hardcore_dialog_description_2" translatable="false">-David Allio\n</string>
    <string name="hardcore_dialog_description_3">Also, you earned</string>
    <string name="hardcore_dialog_description_4" translatable="false">0</string>
    <string name="hardcore_dialog_description_5">coins.\nYes, hardcore mode means no checkpoints</string>
</resources>