<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dialog_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/info_dialog"
            android:contentDescription="@string/dialog_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="282dp"
            android:layout_height="315dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_silent_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/silent_mode"
                    android:textColor="#0277BD"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/info_silent_mode_quote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/shhh"
                    android:textColor="#0277BD"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/info_silent_mode_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/press_start_2p"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/silent_mode_description"
                    android:textAlignment="center"
                    android:textColor="#0277BD"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/silent_hardcore_divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/sh_divider"
                    android:textColor="#0277BD"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_hardcore_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/hardcore_mode"
                    android:textColor="#0277BD"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/info_hardcore_mode_quote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/press_start_2p"
                    android:text="@string/grrr"
                    android:textColor="#0277BD"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/info_hardcore_mode_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/press_start_2p"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/hardcore_mode_description"
                    android:textAlignment="center"
                    android:textColor="#0277BD"
                    android:textSize="14sp" />
            </LinearLayout>
        </ScrollView>

        <ImageButton
            android:id="@+id/dialog_okay_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/okay_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/okay_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>