<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dialog_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/info_dialog"
            android:contentDescription="@string/dialog_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/hardcore_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/press_start_2p"
            android:lineSpacingExtra="5sp"
            android:text="@string/hardcore_dialog_title"
            android:textAlignment="center"
            android:textColor="#0277BD"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/hardcore_dialog_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/press_start_2p"
            android:text="@string/hardcore_dialog_quote"
            android:textColor="#0277BD"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hardcore_dialog_title"
            app:layout_constraintVertical_bias="0.0" />

        <ScrollView
            android:id="@+id/hardcore_dialog_scroll_view"
            android:layout_width="288dp"
            android:layout_height="145dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="34dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hardcore_dialog_quote"
            app:layout_constraintVertical_bias="0.0" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hardcore_dialog_description_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/press_start_2p"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/hardcore_dialog_description_1"
                    android:textAlignment="center"
                    android:textColor="#0277BD"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/hardcore_dialog_description_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/press_start_2p"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/hardcore_dialog_description_2"
                    android:textAlignment="textEnd"
                    android:textColor="#0277BD"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/hardcore_dialog_description_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/press_start_2p"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/hardcore_dialog_description_3"
                    android:textAlignment="center"
                    android:textColor="#0277BD"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/hardcore_dialog_description_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/press_start_2p"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/hardcore_dialog_description_4"
                    android:textAlignment="center"
                    android:textColor="#0277BD"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/hardcore_dialog_description_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/press_start_2p"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/hardcore_dialog_description_5"
                    android:textAlignment="center"
                    android:textColor="#0277BD"
                    android:textSize="16sp" />
            </LinearLayout>

        </ScrollView>


        <ImageButton
            android:id="@+id/hardcore_dialog_okay_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/okay_button"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hardcore_dialog_scroll_view"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/okay_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>