<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <View
        android:id="@+id/divider2"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="2dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:contentPadding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangular_background"
            android:gravity="center"
            android:padding="4dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/chapter_title"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit ="marquee_forever"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:scrollHorizontally="true"
                android:text="@string/chapter_title"
                android:textAlignment="center"
                android:textColor="#0277BD"
                android:fontFamily="@font/press_start_2p"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/item_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/creation_date"
                android:singleLine="true"
                android:text="@string/chapter_date"
                android:textAlignment="center"
                android:textColor="#0277BD"
                android:fontFamily="@font/press_start_2p"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/item_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                android:singleLine="true"
                android:contentDescription="@string/total_time_studying"
                android:text="@string/chapter_time"
                android:textAlignment="center"
                android:textColor="#0277BD"
                android:fontFamily="@font/press_start_2p"
                android:textSize="12sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>